# lossless-transform-utils

./: CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  README.md  cbindgen_c.toml  cbindgen_cpp.toml
.github/: changelog.hbs  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: rust.yml
benches/all/: main.rs
benches/entropy/: main.rs
benches/histogram/: main.rs  portable.rs
benches/match_estimator/: main.rs
src/: AGENTS.md  Cargo.toml  exports.rs  lib.rs
src/entropy/: mod.rs
src/histogram/: histogram32.rs  histogram32_private.rs  mod.rs
src/lossless-transform-utils/: Cargo.toml  README.MD
src/lossless-transform-utils/benches/all/: main.rs
src/lossless-transform-utils/benches/entropy/: main.rs
src/lossless-transform-utils/benches/histogram/: main.rs
src/lossless-transform-utils/benches/match_estimator/: main.rs
src/lossless-transform-utils/src/: lib.rs
src/lossless-transform-utils/src/entropy/: mod.rs
src/lossless-transform-utils/src/histogram/: histogram32.rs  histogram32_private.rs
src/lossless-transform-utils/src/match_estimator/: avx2.rs  avx512.rs  mod.rs
src/match_estimator/: avx2.rs  avx512.rs  mod.rs
