[package]
name = "lossless-transform-utils"
version = "0.1.3"
edition = "2021"
description = "General purpose utility methods for creating lossless transforms for various file formats."
repository = "https://github.com/Sewer56/lossless-transform-utils"
license-file = "../../LICENSE"
include = ["src/**/*", "README.MD", "../../LICENSE"]
readme = "README.MD"

[features]
default = ["std"]
# Enables x86 CPU feature detection.
std = []
# See README.md for more information on using Profile-Guided Optimization.
# This enables some extra benches (conditionally) to gather profiling data.
# Right now it's a no-op.
pgo = []
# Feature for enabling C library exports.
c-exports = []
# Use nightly features. Which for now is 1 x86 naked routine.
nightly = ["safe-allocator-api/nightly"]
# Enable benchmarks for non-public API items.
bench = []

# Use AVX2 Implementation of match estimator
# This shouldn't be used. It's just an experimental implementation that (unfortunately)
# did not hit performance targets due to a lack of scatter instruction.
estimator-avx2 = []

# Use AVX512 Implementation of match estimator [requires nightly]
# Only tested in CI, not sure about performance, I (Sewer) don't own a AVX512 capable machine.
# In theory it should be faster than scalar; so preferable.
estimator-avx512 = ["nightly"]

[dependencies]
safe-allocator-api = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.8.1"
rstest = "0.26.1"

# Benchmark Stuff
[[bench]]
name = "histogram"
path = "benches/histogram/main.rs"
harness = false

[[bench]]
name = "entropy"
path = "benches/entropy/main.rs"
harness = false

[[bench]]
name = "match_estimator"
path = "benches/match_estimator/main.rs"
harness = false

[[bench]]
name = "all"
path = "benches/all/main.rs"
harness = false
